style header and footer

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <section class="game-area">
         <div>
             <p>Choose 1 of the following :</p>
-            <button aria-label="Rock">Rock</button>
-            <button aria-label="Paper">Paper</button>
-            <button aria-label="Scissors">Scissors</button>
+            <button aria-label="Rock" class="selector">Rock</button>
+            <button aria-label="Paper" class="selector">Paper</button>
+            <button aria-label="Scissors" class="selector">Scissors</button>
         </div>
 
        <div class="player">
