--- a/index.html
+++ b/index.html
@@ -17,24 +17,27 @@
     <section class="game-area">
         <div>
             <p>Choose 1 of the following :</p>
-            <button aria-label="Rock" class="selector">Rock</button>
-            <button aria-label="Paper" class="selector">Paper</button>
-            <button aria-label="Scissors" class="selector">Scissors</button>
+            <button aria-label="Rock" class="selector" ><i class="fa-regular fa-hand-back-fist"></i>Rock</button>
+            <button aria-label="Paper" class="selector" ><i class="fa-solid fa-hand"></i>Paper</button>
+            <button aria-label="Scissors" class="selector"><i class="fa-regular fa-hand-scissors"></i>Scissors</button>
         </div>
 
+        <div id="messages"></div>
+
        <div class="player">
-        <h2 class="scores">Your Score :<span id="player-score">0</span></h2>
-        <img>
+        <h2 class="scores">Your Score : <span id="player-score">0</span></h2>
+        <img id="player-image" src="assets/images/RPS2.jpg" alt="Rock Paper Scissors">
        </div>
 
        <div class="computer">
-        <h2 class="scores">Computer Score : <span id="computer-score"></span></h2>
-        <img>
+        <h2 class="scores">Computer Score : <span id="computer-score">0</span></h2>
+        <img id="computer-image" src="assets/images/RPS2.jpg" alt="Rock Paper Scissors">
        </div>
         
     </section>
 
     <script src="assets/js/script.js"></script>
+    
     <footer> 
      <h3>Rules</h3>
      <p>Rock > Scissors | Paper > Rock | Scissors > Paper</p>
