--- a/index.html
+++ b/index.html
@@ -16,27 +16,28 @@
 
     <section class="game-area">
         <div>
-            <p>Choose 1 of the following :</p>
-            <button aria-label="Rock" class="selector" ><i class="fa-regular fa-hand-back-fist"></i>Rock</button>
-            <button aria-label="Paper" class="selector" ><i class="fa-solid fa-hand"></i>Paper</button>
-            <button aria-label="Scissors" class="selector"><i class="fa-regular fa-hand-scissors"></i>Scissors</button>
+            <p>Make Your Move!</p>
+            <button data-choice="0" aria-label="Rock" class="selector" ><i class="fa-solid fa-hand-back-fist"></i>Rock</button>
+            <button data-choice="1" aria-label="Paper" class="selector" ><i class="fa-solid fa-hand"></i>Paper</button>
+            <button data-choice="2" aria-label="Scissors" class="selector"><i class="fa-solid fa-hand-scissors fa-rotate-90"></i>Scissors</button>
         </div>
 
         <div id="messages"></div>
 
        <div class="player">
         <h2 class="scores">Your Score : <span id="player-score">0</span></h2>
-        <img id="player-image" src="assets/images/RPS2.jpg" alt="Rock Paper Scissors">
+        <img id="player-image" src="assets/images/rps2-rock.jpg" alt="Rock Paper Scissors">
        </div>
 
        <div class="computer">
         <h2 class="scores">Computer Score : <span id="computer-score">0</span></h2>
-        <img id="computer-image" src="assets/images/RPS2.jpg" alt="Rock Paper Scissors">
+        <img id="computer-image" src="assets/images/rps2-paper.jpg" alt="Rock Paper Scissors">
        </div>
         
     </section>
 
     <script src="assets/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/630108b11f.js" crossorigin="anonymous"></script>
     
     <footer> 
      <h3>Rules</h3>
