--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <section class="game-area">
         <div>
             <p>Make Your Move!</p>
-            <button data-choice="0" aria-label="Rock" class="selector" ><i class="fa-solid fa-hand-back-fist"></i>Rock</button>
-            <button data-choice="1" aria-label="Paper" class="selector" ><i class="fa-solid fa-hand"></i>Paper</button>
-            <button data-choice="2" aria-label="Scissors" class="selector"><i class="fa-solid fa-hand-scissors fa-rotate-90"></i>Scissors</button>
+            <button data-choice="0" aria-label="Rock" class="selector" ><i class="fa-solid fa-hand-back-fist"></i>ROCK</button>
+            <button data-choice="1" aria-label="Paper" class="selector" ><i class="fa-solid fa-hand"></i>PAPER</button>
+            <button data-choice="2" aria-label="Scissors" class="selector"><i class="fa-solid fa-hand-scissors fa-rotate-90"></i>SCISSORS</button>
         </div>
 
         <div id="messages"></div>
@@ -40,7 +40,7 @@
     <script src="https://kit.fontawesome.com/630108b11f.js" crossorigin="anonymous"></script>
     
     <footer> 
-     <h3>Rules</h3>
+     <h2>Rules</h2>
      <p>Rock > Scissors | Paper > Rock | Scissors > Paper</p>
     </footer>
 </body>
