add updatescore function and add code

--- a/index.html
+++ b/index.html
@@ -22,24 +22,25 @@
     <section class="game-area">
         <div>
             <p>Make Your Move!</p>
-            <button data-choice="rock" aria-label="Rock" class="selector"><i
+            <button onclick=";" data-choice="rock" aria-label="Rock" class="selector"><i
                     class="fa-solid fa-hand-back-fist"></i>ROCK</button>
-            <button data-choice="paper" aria-label="Paper" class="selector"><i
+            <button onclick=";" data-choice="paper" aria-label="Paper" class="selector"><i
                     class="fa-solid fa-hand"></i>PAPER</button>
-            <button data-choice="scissors" aria-label="Scissors" class="selector"><i
+            <button onclick=";" data-choice="scissors" aria-label="Scissors" class="selector"><i
                     class="fa-solid fa-hand-scissors fa-rotate-90"></i>SCISSORS</button>
+
         </div>
 
         <div id="messages"></div>
 
         <div class="player">
-            <h2 class="scores">Your Score : <span id="player-score">0</span></h2>
-            <img id="player-image" src="assets/images/rps2-rock.jpg" alt="Rock Paper Scissors">
+            <h2 class="scores">Your Score: <span id="player-score">0</span></h2>
+            <img id="player-image" src="assets/images/RPS2.jpg" alt="Rock Paper Scissors">
         </div>
 
         <div class="computer">
-            <h2 class="scores">Computer Score : <span id="computer-score">0</span></h2>
-            <img id="computer-image" src="assets/images/rps2-paper.jpg" alt="Rock Paper Scissors">
+            <h2 class="scores">Computer Score: <span id="computer-score">0</span></h2>
+            <img id="computer-image" src="assets/images/RPS2.jpg" alt="Rock Paper Scissors">
         </div>
 
     </section>
