--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
         <div class="player">
             <h2 class="scores">You: <span id="player-score">0</span></h2>
-            <img id="player-image" src="assets/images/istockphoto-1271192332-612x612.jpg" alt="Rock Paper Scissors">
+            <img id="player-image" src="assets/images/paper3.jpg" alt="Rock Paper Scissors">
         </div>
 
         <div class="computer">
             <h2 class="scores">Computer: <span id="computer-score">0</span></h2>
-            <img id="computer-image" src="assets/images/istockphoto-1271192332-612x612.jpg" alt="Rock Paper Scissors">
+            <img id="computer-image" src="assets/images/rock3.jpg" alt="Rock Paper Scissors">
         </div>
 
     </section>
