--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <section class="game-area">
         <div>
             <p>Make Your Move!</p>
-            <button onclick="getMessage()" data-choice="1" aria-label="Rock" class="selector"><i
+            <button onclick="getMessage()" data-choice="0" aria-label="Rock" class="selector"><i
                     class="fa-solid fa-hand-back-fist"></i>ROCK</button>
-            <button onclick="getMessage()" data-choice="2" aria-label="Paper" class="selector"><i
+            <button onclick="getMessage()" data-choice="1" aria-label="Paper" class="selector"><i
                     class="fa-solid fa-hand"></i>PAPER</button>
-            <button onclick="getMessage()" data-choice="3" aria-label="Scissors" class="selector"><i
+            <button onclick="getMessage()" data-choice="2" aria-label="Scissors" class="selector"><i
                     class="fa-solid fa-hand-scissors fa-rotate-90"></i>SCISSORS</button>
 
         </div>
@@ -34,15 +34,13 @@
         <div id="messages"></div>
 
         <div class="player">
-
-            <h3 class="round">Round: <span id="player-round">0</span></h3>
+            <h2 class="round">Round: <span id="player">0</span></h2>
             <h2 class="scores">You: <span id="player-score">0</span></h2>
             <img id="player-image" src="assets/images/paper3.jpg" alt="Rock Paper Scissors">
         </div>
 
         <div class="computer">
-
-            <h3 class="round">Round: <span id="computer-round">0</span></h3>
+            <h2 class="round">Round: <span id="computer-round">0</span></h2>
             <h2 class="scores">Computer: <span id="computer-score">0</span></h2>
             <img id="computer-image" src="assets/images/rock3.jpg" alt="Rock Paper Scissors">
         </div>
