remove alerts and add a second messages box

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <section class="game-area">
         <div>
             <p>Make Your Move!</p>
-            <button onclick="getMessage()" data-choice="0" aria-label="Rock" class="selector"><i
+            <button data-choice="0" aria-label="Rock" class="selector"><i
                     class="fa-solid fa-hand-back-fist"></i>ROCK</button>
-            <button onclick="getMessage()" data-choice="1" aria-label="Paper" class="selector"><i
-                    class="fa-solid fa-hand"></i>PAPER</button>
-            <button onclick="getMessage()" data-choice="2" aria-label="Scissors" class="selector"><i
+            <button data-choice="1" aria-label="Paper" class="selector"><i class="fa-solid fa-hand"></i>PAPER</button>
+            <button data-choice="2" aria-label="Scissors" class="selector"><i
                     class="fa-solid fa-hand-scissors fa-rotate-90"></i>SCISSORS</button>
 
         </div>
 
         <div id="messages"></div>
+        <div id="messages2"></div>
 
         <div class="player">
             <h3 class="round">Round: <span id="player-round">0</span></h3>
