--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <footer>
         <h2>Rules</h2>
         <p>Rock > Scissors | Paper > Rock | Scissors > Paper</p>
+        <p>First Player To Reach 3 Wins!</p>
     </footer>
 </body>
 
