--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 
         </div>
 
-        <div id="messages"></div>
-        <div id="messages2"></div>
+        <div id="message-box">
+            <div id="messages"></div>
+            <div id="messages2"></div>
+        </div>
 
         <div class="player">
             <h3 class="round">Round: <span id="player-round">0</span></h3>
