make images resposnsive by changing css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <footer>
         <h2>Rules</h2>
         <p>Rock > Scissors | Paper > Rock | Scissors > Paper</p>
-        <p>First Player To Reach 3 Wins!</p>
+        <p>First Player To Reach 3 Wins The Round!</p>
     </footer>
 </body>
 
