Create upperCaseChoice and pass to getMessages function

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <section class="game-area">
         <div>
             <p>Make Your Move!</p>
-            <button data-choice="0" aria-label="Rock" class="selector"><i
+            <button data-choice="0" aria-label="ROCK" class="selector"><i
                     class="fa-solid fa-hand-back-fist"></i>ROCK</button>
-            <button data-choice="1" aria-label="Paper" class="selector"><i class="fa-solid fa-hand"></i>PAPER</button>
-            <button data-choice="2" aria-label="Scissors" class="selector"><i
+            <button data-choice="1" aria-label="PAPER" class="selector"><i class="fa-solid fa-hand"></i>PAPER</button>
+            <button data-choice="2" aria-label="SCISSORS" class="selector"><i
                     class="fa-solid fa-hand-scissors fa-rotate-90"></i>SCISSORS</button>
 
         </div>
