Create messages1 div and make display under messages div

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         <div id="message-box">
             <div id="messages"></div>
+            <div id="messages1">DIV</div>
 
         </div>
 
