Add messages1 into getMessage function

--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
 
         </div>
 
-        <div id="message-box">
-            <div id="messages"></div>
-            <div id="messages1">DIV</div>
 
-        </div>
 
         <!--Player box-->
         <div class="player">
@@ -53,6 +49,13 @@
             <h3 class="round">Round: <span id="computer-round">0</span></h3>
             <h2 class="scores">Computer: <span id="computer-score">0</span></h2>
             <img id="computer-image" src="assets/images/paper3.jpg" alt="Rock Paper Scissors">
+        </div>
+
+
+        <div id="message-box">
+            <div id="messages"></div>
+            <div id="messages1"></div>
+
         </div>
 
     </section>
