--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 
         <!--Player box-->
         <div class="player">
-            <h3 class="round">Round: <span id="player-round">0</span></h3>
-            <h2 class="scores">You: <span id="player-score">0</span></h2>
+            <h1 class="round">Rounds Won: <span id="player-round">0</span></h1>
+            <h1 class="scores">Your Score: <span id="player-score">0</span></h1>
             <img id="player-image" src="assets/images/paper3.jpg" alt="Rock Paper Scissors">
         </div>
 
         <!--Computer box-->
         <div class="computer">
-            <h3 class="round">Round: <span id="computer-round">0</span></h3>
-            <h2 class="scores">Computer: <span id="computer-score">0</span></h2>
+            <h1 class="round">Rounds Won: <span id="computer-round">0</span></h1>
+            <h1 class="scores">Computer Score: <span id="computer-score">0</span></h1>
             <img id="computer-image" src="assets/images/paper3.jpg" alt="Rock Paper Scissors">
         </div>
 
