Put Vs inbetween player box and computer box

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
         <div id="message-box">
             <div id="messages"></div>
+            <div id="vs">VS</div>
             <div id="messages1"></div>
 
         </div>
